src/test/ui/error-codes/E0034.stderr
error[E0034]: multiple applicable items in scope
  --> $DIR/E0034.rs:20:5
   |
LL |     Test::foo()
   |     ^^^^^^^^^ multiple `foo` found
   |
note: candidates defined here:
  --> $DIR/E0034.rs:12:5
   |
LL |     fn foo() {}
   |     ^^^^^^^^ candidate #1 is defined in an impl of the trait `Trait1` for the type `Test`
...
LL |     fn foo() {}
   |     ^^^^^^^^ candidate #2 is defined in an impl of the trait `Trait2` for the type `Test`
help: disambiguate the method call for candidate #1
   |
LL |     Trait1::foo()
   |     ^^^^^^^^^^^
help: disambiguate the method call for candidate #2
   |
LL |     Trait2::foo()
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0034`.
